--- a/index.html
+++ b/index.html
@@ -15,24 +15,59 @@
             <h1>RELOJ DIGITAL</h1>
         </div>
         <ul class="header__options-container">
-            <li class="header__options__theme">
-                <div class="header__options__theme__label">color-theme</div>
-                <div class="header__options__theme__label__color color--1" style="--color-option: #facc15; --position: 1;"></div>
-                <div class="header__options__theme__label__color color--2" style="--color-option: #4ade80; --position: 2;"></div>
-                <div class="header__options__theme__label__color color--3" style="--color-option: #8b5cf6; --position: 3;"></div>
-                <div class="header__options__theme__label__color color--4" style="--color-option: #3b82f6; --position: 4;"></div>
+            <li class="header__options__theme" role="button">
+                <button class="header__options__theme__label">color-theme</button>
+                <button class="header__options__theme__label__color color--1" style="--color-option: #facc15; --position: 1;"></button>
+                <button class="header__options__theme__label__color color--2" style="--color-option: #4ade80; --position: 2;"></button>
+                <button class="header__options__theme__label__color color--3" style="--color-option: #8b5cf6; --position: 3;"></button>
+                <button class="header__options__theme__label__color color--4" style="--color-option: #3b82f6; --position: 4;"></button>
             </li>
             <li class="header__options__theme-mode">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="header__options__svg">
-                    <!--!Font Awesome Free 7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.-->
-                    <path d="M512 320C512 214 426 128 320 128L320 512C426 512 512 426 512 320zM64 320C64 178.6 178.6 64 320 64C461.4 64 576 178.6 576 320C576 461.4 461.4 576 320 576C178.6 576 64 461.4 64 320z"/>
-                </svg>
+                <button class="header__options__them-mode__button">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="header__options__svg">
+                        <!--!Font Awesome Free 7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.-->
+                        <path d="M512 320C512 214 426 128 320 128L320 512C426 512 512 426 512 320zM64 320C64 178.6 178.6 64 320 64C461.4 64 576 178.6 576 320C576 461.4 461.4 576 320 576C178.6 576 64 461.4 64 320z"/>
+                    </svg>
+                </button>
             </li>
-            <li class="header__options__config">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="header__options__svg">
-                    <!--!Font Awesome Free 7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.-->
-                    <path d="M259.1 73.5C262.1 58.7 275.2 48 290.4 48L350.2 48C365.4 48 378.5 58.7 381.5 73.5L396 143.5C410.1 149.5 423.3 157.2 435.3 166.3L503.1 143.8C517.5 139 533.3 145 540.9 158.2L570.8 210C578.4 223.2 575.7 239.8 564.3 249.9L511 297.3C511.9 304.7 512.3 312.3 512.3 320C512.3 327.7 511.8 335.3 511 342.7L564.4 390.2C575.8 400.3 578.4 417 570.9 430.1L541 481.9C533.4 495 517.6 501.1 503.2 496.3L435.4 473.8C423.3 482.9 410.1 490.5 396.1 496.6L381.7 566.5C378.6 581.4 365.5 592 350.4 592L290.6 592C275.4 592 262.3 581.3 259.3 566.5L244.9 496.6C230.8 490.6 217.7 482.9 205.6 473.8L137.5 496.3C123.1 501.1 107.3 495.1 99.7 481.9L69.8 430.1C62.2 416.9 64.9 400.3 76.3 390.2L129.7 342.7C128.8 335.3 128.4 327.7 128.4 320C128.4 312.3 128.9 304.7 129.7 297.3L76.3 249.8C64.9 239.7 62.3 223 69.8 209.9L99.7 158.1C107.3 144.9 123.1 138.9 137.5 143.7L205.3 166.2C217.4 157.1 230.6 149.5 244.6 143.4L259.1 73.5zM320.3 400C364.5 399.8 400.2 363.9 400 319.7C399.8 275.5 363.9 239.8 319.7 240C275.5 240.2 239.8 276.1 240 320.3C240.2 364.5 276.1 400.2 320.3 400z"/>
-                </svg>
+            <li class="header__options__config close">
+                <button class="header__options__config__button">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="header__options__svg">
+                        <!--!Font Awesome Free 7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.-->
+                        <path d="M259.1 73.5C262.1 58.7 275.2 48 290.4 48L350.2 48C365.4 48 378.5 58.7 381.5 73.5L396 143.5C410.1 149.5 423.3 157.2 435.3 166.3L503.1 143.8C517.5 139 533.3 145 540.9 158.2L570.8 210C578.4 223.2 575.7 239.8 564.3 249.9L511 297.3C511.9 304.7 512.3 312.3 512.3 320C512.3 327.7 511.8 335.3 511 342.7L564.4 390.2C575.8 400.3 578.4 417 570.9 430.1L541 481.9C533.4 495 517.6 501.1 503.2 496.3L435.4 473.8C423.3 482.9 410.1 490.5 396.1 496.6L381.7 566.5C378.6 581.4 365.5 592 350.4 592L290.6 592C275.4 592 262.3 581.3 259.3 566.5L244.9 496.6C230.8 490.6 217.7 482.9 205.6 473.8L137.5 496.3C123.1 501.1 107.3 495.1 99.7 481.9L69.8 430.1C62.2 416.9 64.9 400.3 76.3 390.2L129.7 342.7C128.8 335.3 128.4 327.7 128.4 320C128.4 312.3 128.9 304.7 129.7 297.3L76.3 249.8C64.9 239.7 62.3 223 69.8 209.9L99.7 158.1C107.3 144.9 123.1 138.9 137.5 143.7L205.3 166.2C217.4 157.1 230.6 149.5 244.6 143.4L259.1 73.5zM320.3 400C364.5 399.8 400.2 363.9 400 319.7C399.8 275.5 363.9 239.8 319.7 240C275.5 240.2 239.8 276.1 240 320.3C240.2 364.5 276.1 400.2 320.3 400z"/>
+                    </svg>
+                    <div class="header__options__config__chart__wrapper">
+                        <div class="header__options__config__chart">
+                            <div class="header__options__config__chart__hour-format">Formato de hora
+                                <label class="header__options__config__chart__label">
+                                    <input class="header__options__config__chart__input-1" type="radio" name="hour-format">
+                                    <p class="header__options__config__chart__label-1">12hrs</p>
+                                </label>
+                                <label class="header__options__config__chart__label">
+                                    <input class="header__options__config__chart__input-1" type="radio" name="hour-format">
+                                    <p class="header__options__config__chart__label-1">24hrs</p>
+                                </label>
+                            </div>
+
+                            <label class="header__options__config__chart__label">
+                                <input class="header__options__config__chart__input-2" type="checkbox">
+                                <p class="header__options__config__chart__label-2">Segundos</p>
+                            </label>
+
+                            <label class="header__options__config__chart__label">
+                                <select class="header__options__config__chart__label-3">
+                                    <option value="">asdasd</option>
+                                    <option value="">asdasd</option>
+                                </select>
+                            </label>
+
+                            <label class="header__options__config__chart__label">
+                                <input class="header__options__config__chart__input-4" type="checkbox">
+                                <p class="header__options__config__chart__label-4">a.m. - p.m.</p>
+                            </label>
+                        </div>
+                    </div>
+                </button>
             </li>
         </ul>
     </header>
@@ -45,9 +80,7 @@
     <!------------------- MAIN END ------------------>
     <main class="main">
         <div class="main__time"></div>
-        <div class="main__date">
-            <div class="main__date__am-pm"></div>
-        </div>
+        <div class="main__date"></div>
     </main>
 
     <script src="app.js"></script>
